--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dynamic = ["version"]
 requires-python = ">= 3.12"
 
 dependencies = [
-    "pymodbus>=3.8.2,<3.8.5",
+    "pymodbus>=3.8.2,!=3.8.5,<3.10",
     "pyserial-asyncio>=0.6",
     "aiocmd>=0.1.5"
 ]
