--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,3 +53,6 @@ exclude = [
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/pyairios"]
+
+[tool.pytest.ini_options]
+pythonpath = ["src/", "."]
