sort imports, add pytest toml, tests/1, add req_test.txt, fix CLI+code spelling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,3 +48,6 @@ exclude = [
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/pyairios"]
+
+[tool.pytest.ini_options]
+pythonpath = ["src/", "."]
