--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dynamic = ["version"]
 requires-python = ">= 3.12"
 
 dependencies = [
-    "pymodbus>=3.8.2,!=3.8.5,<3.10",
+    "pymodbus>=3.11",  # bump for HA 2025.9.0 from: 3.8.2,!=3.8.5,<3.10",
     "pyserial-asyncio>=0.6",
     "aiocmd>=0.1.5"
 ]
