--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,3 +28,9 @@ repos:
       language: system
       types: [python]
       args: [ "--rcfile=.pylintrc", ]
+    - id: mypy
+      name: mypy
+      entry: mypy --pretty --show-error-codes --show-error-context
+      language: system
+      pass_filenames: true
+      files: ^(src)/.+\.py$
