--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
 
 dynamic = ["version"]
 
-requires-python = ">= 3.12"
+requires-python = ">= 3.13"
 
 dependencies = [
     "pymodbus>=3.11.2,<4",
@@ -29,7 +29,7 @@ dependencies = [
 ]
 
 [dependency-groups]
-typing = ["mypy", "types-pyserial"]
+typing = ["mypy", "pyright", "types-pyserial"]
 linting = ["pylint"]
 tests = ["pytest", "pytest-asyncio", "pytest-reserial"]
 dev = [{include-group = "typing"}, {include-group = "linting"}, {include-group = "tests"}, "pre-commit"]
@@ -57,6 +57,15 @@ packages = ["src/pyairios"]
 
 [tool.pytest.ini_options]
 pythonpath = ["src/", "."]
+
+[tool.mypy]
+python_version = "3.13"
+pretty = true
+follow_imports = "silent"
+ignore_missing_imports = true
+warn_incomplete_stub = true
+warn_redundant_casts = true
+warn_unused_configs = true
 
 [tool.ruff]
 line-length = 100
