--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,9 +8,9 @@ repos:
     hooks:
       - id: ruff
         args: [ --fix ]
-        files: ^(src|cli)/.+\.py$
+        files: (^(src|tests)/.+\.py$|cli.py)
       - id: ruff-format
-        files: ^(src/cli)/.+\.py$
+        files: (^(src|tests)/.+\.py$|cli.py)
   - repo: https://github.com/codespell-project/codespell
     rev: v2.4.1
     hooks:
@@ -39,7 +39,7 @@ repos:
           - --show-error-context
         language: system
         pass_filenames: true
-        files: ^(src|cli|tests)/.+\.py$
+        files: (^(src|tests)/.+\.py$|cli.py)
       - id: pylint
         name: pylint
         entry: pylint
@@ -49,4 +49,4 @@ repos:
         name: pyright
         entry: uv run pyright
         language: system
-        files: ^(src|cli|tests)/.+\.py$
+        files: (^(src|tests)/.+\.py$|cli.py)
